# filename: Cargo.toml
# destination: eco_restoration_shard/crates/bioscale-fairness-validator/Cargo.toml
# repo-target: github.com/mk-bluebird/eco_restoration_shard

[package]
name = "bioscale-fairness-validator"
version = "0.1.0"
edition = "2024"
description = "Bioscale fairness validator for MT6883 healthcare corridors and eco-wealth rewards."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/eco_restoration_shard"
readme = "README.md"
keywords = ["healthcare", "fairness", "ker", "mt6883"]
authors = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
rust-version = "1.85"

[lib]
name = "bioscale_fairness_validator"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
kerresidual = { path = "../kerresidual" }

# Kani should never be optional; it is included as a hard dependency for formal checks.
kani = "0.50.0"

[dev-dependencies]
serde_json = "1.0.115"

[features]
# No optional features: all code paths, including Kani checks, are always compiled.
default = []
