# Minimal Cargo.toml for bioscale_evolution_cli
[package]
name = "bioscale_evolution_cli"
version = "0.1.0"
edition = "2024"
description = "CLI for bioscale evolution healthcare upgrades"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
authors = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
rust-version = "1.85"

[[bin]]
name = "bioscale_evolution_cli"
path = "src/main.rs"

[dependencies]
clap = "3.2"
cosmos-sdk-proto = "0.20"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
