[package]
name = "blacklist-trie"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = [
    "mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"
]
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
description = "SQLite-backed blacklist trie for actuator-pattern safety in eco_restoration_shard."
categories = ["security", "text-processing", "database"]
keywords = ["trie", "sqlite", "blacklist", "ecosafety"]

[lib]
name = "blacklist_trie"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
kani = "0.67.0"
