# Minimal Cargo.toml for bostrom-cli
[package]
name = "bostrom-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Bostrom DID operations and blacklist guard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
authors = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
rust-version = "1.85"

[[bin]]
name = "bostrom-cli"
path = "src/main.rs"

[dependencies]
blacklist_filter = { path = "../blacklist_filter" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
