# Minimal Cargo.toml for bostrom-signer
[package]
name = "bostrom-signer"
version = "0.1.0"
edition = "2024"
description = "Bostrom DID signer with contributor address enforcement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
authors = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
rust-version = "1.85"

[lib]
name = "bostrom_signer"
path = "src/lib.rs"

[dependencies]
cosmos-sdk-proto = "0.20"
tendermint = "0.34"
ed25519-dalek = "2.1"
prost = "0.12"
thiserror = "1.0"
