# Minimal Cargo.toml for cargo-blast-radius
[package]
name = "cargo-blast-radius"
version = "0.1.0"
edition = "2024"
description = "Dependency cycle analysis and breaking for Cargo workspaces"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
authors = ["mk-bluebird <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
rust-version = "1.85"

[[bin]]
name = "cargo-blast-radius"
path = "src/main.rs"

[lib]
name = "cargo_blast_radius"
path = "src/lib.rs"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
