[package]
name = "city-pass"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Sovereign, offline-capable transit pass crate for Phoenix metro"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
