# crates/community-governance/Cargo.toml

[package]
name = "community-governance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Community lane, KER, and ALN-based governance primitives for Prometheus-Praxis."
repository = "https://github.com/mk-bluebird/Prometheus-Praxis"
readme = "README.md"
keywords = ["aln", "governance", "ecosafety", "ker", "lanes"]
categories = ["science", "algorithms", "data-structures"]

[lib]
name = "community_governance"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
aln_core = "0.1"
